<resources>
    <string name="app_name">Power Of Mind</string>
    <string name="title_activity_home">Power Of Mind</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_menu_home">Home</string>
    <string name="navigation_menu_programmes">Programmes</string>
    <string name="navigation_menu_message">Message of the Day</string>
    <string name="navigation_menu_video">Video Gallery</string>
    <string name="navigation_menu_audio">Audio Gallery</string>
    <string name="navigation_menu_newsandevents">News and Events</string>
    <string name="navigation_menu_darshan">Live Darshan</string>
    <string name="navigation_menu_centrelocator">Centre Locator</string>
    <string name="navigation_menu_articles">Articles</string>


    <string name="server_url">http://139.59.64.145:3000/</string>

    <string name="country_prompt">Select Country</string>
    <string name="city_prompt">Select City</string>


    <string-array name="country_arrays">
        <item>Select Country</item>
        <item>India</item>
        <item>USA</item>
    </string-array>


    <string-array name="city_arrays_india">

        <item>Ahmedabad</item>
        <item>Indore</item>
        <item>Jabalpur</item>
        <item>Mumbai</item>
        <item>New Delhi</item>

    </string-array>
    <string-array name="city_arrays_usa">

        <item>DC</item>
        <item>Indiana</item>
        <item>Kansas</item>
        <item>LA</item>
        <item>Pittsburgh</item>

    </string-array>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="read_more"> Read More...</string>

</resources>
