<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/navigation_menu_programmes">
        <group android:checkableBehavior="single">
            <item android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/navigation_menu_home" />
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_message"
                android:title="@string/navigation_menu_message" />
            <item
                android:id="@+id/nav_video"
                android:icon="@drawable/ic_video_gallery"
                android:title="@string/navigation_menu_video" />
            <item
                android:id="@+id/nav_audio"
                android:icon="@drawable/ic_audio_gallery"
                android:title="@string/navigation_menu_audio" />
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_event"
                android:title="@string/navigation_menu_newsandevents" />
            <item
                android:id="@+id/nav_darshan"
                android:icon="@drawable/ic_live_darshan"
                android:title="@string/navigation_menu_darshan" />
            <item
                android:id="@+id/nav_centre"
                android:icon="@drawable/ic_centre_locator"
                android:title="@string/navigation_menu_centrelocator" />
            <!--<item
                android:id="@+id/nav_articles"
                android:icon="@drawable/ic_articles"
                android:title="@string/navigation_menu_articles" />-->
        </group>
    </item>

</menu>
